--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BeeFound"
+        android:theme="@style/Theme.BeeFound1"
         tools:targetApi="31" >
         <activity
             android:name=".LogIn"
@@ -37,7 +37,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.BeeFound" >
+            android:theme="@style/Theme.BeeFound1" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
